--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@
               href="mailto:info@devstudio.com"
               class="contacts header-contacts-mail"
               ><span
-                href="mailto:info@devstudio.com"
                 class="header-icon header-contacts-mail"
-                aria-label="Mail"
                 ><svg class="mail">
-                  <use href="./images/icons.svg#icon-envelope"></use>
+                  <use href="./images/icons.svg#icon-envelope" aria-label="Mail"></use>
                 </svg> </span
               >info@devstudio.com</a
             >
@@ -51,11 +49,9 @@
           <li class="phone-header-group">
             <a href="tel:+12127724150" class="contacts header-contacts-phone"
               ><span
-                href="tel:+12127724150"
                 class="header-icon header-contacts-phone"
-                aria-label="Phone number"
                 ><svg class="phone-number">
-                  <use href="./images/icons.svg#icon-smartphone"></use>
+                  <use href="./images/icons.svg#icon-smartphone-1" aria-label="Phone number"></use>
                 </svg> </span
               >+1 212-772-4150</a
             >
